rate card alignment fix

--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -32,7 +32,6 @@
 
 .restaurant-RateSlab {
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
